Added some more styles to the dummy elements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="css/yagf.css">
 </head>
 <body>
-
+  <main>
+    <div class="yagf">
+      <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
