--- a/index.html
+++ b/index.html
@@ -9,9 +9,23 @@
   <main>
     <div class="yagf">
       <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="cell col-lg-10-12 col-sm-1-5">Right</div>
+        <div class="cell col-lg-5-9 col-sm-5-9">Mid</div>
+        <div class="cell col-lg-2-4 col-sm-9-12">Left</div>
+      </div>
+      <div class="row">
+        <div class="cell col-md-1-1 col-lg-4-4">1</div>
+        <div class="cell col-md-2-2 col-lg-3-3">2</div>
+        <div class="cell col-md-3-3 col-lg-2-2">3</div>
+        <div class="cell col-md-4-4 col-lg-1-1">4</div>
+        <div class="cell col-md-5-5">5</div>
+        <div class="cell col-md-6-6">6</div>
+        <div class="cell col-md-7-7">7</div>
+        <div class="cell col-md-8-8">8</div>
+        <div class="cell col-md-9-9">9</div>
+        <div class="cell col-md-10-10">10</div>
+        <div class="cell col-md-11-11">11</div>
+        <div class="cell col-md-12-12">12</div>
       </div>
     </div>
   </main>
