--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <main>
     <div class="yagf">
       <div class="row">
-        <div class="cell col-lg-10-12 col-sm-1-5">Right</div>
-        <div class="cell col-lg-5-9 col-sm-5-9">Mid</div>
-        <div class="cell col-lg-2-4 col-sm-9-12">Left</div>
+        <div class="cell col-lg-10-12 col-sm-1-5"><img src="img/1f607.png" alt=""></div>
+        <div class="cell col-lg-2-4 col-sm-5-9"><img src="img/1f92a.png" alt=""></div>
+        <div class="cell col-lg-5-9 col-sm-9-12"><img src="img/1f976.png" alt=""></div>
       </div>
       <div class="row">
         <div class="cell col-md-1-1 col-lg-4-4">1</div>
