Added enableDebugging mixin

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Yet another grid framework demo</title>
-    <link rel="stylesheet" href="css/yagf.css">
+  <meta charset="UTF-8">
+  <title>Yet another grid framework demo</title>
+  <link rel="stylesheet" href="css/yagf.css">
+  <style>
+    .cell {
+      font: bold 24px monospace;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  </style>
 </head>
 <body>
   <main>
