--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      text-align: center;
+    }
+    .size-cell {
+      font-size: 20px;
+      font-weight: bold;
     }
   </style>
 </head>
@@ -18,10 +23,10 @@
   <main>
     <div class="yagf">
       <div class="row">
-        <div class="cell col-sm-1-9   col-md-1-1   col-lg-1-1   col-xl-1-1 ">Small</div>
-        <div class="cell col-sm-10-10 col-md-2-10  col-lg-2-2   col-xl-2-2 ">Medium</div>
-        <div class="cell col-sm-11-11 col-md-11-11 col-lg-3-11  col-xl-3-3 ">Large</div>
-        <div class="cell col-sm-12-12 col-md-12-12 col-lg-12-12 col-xl-4-12">Extra<br/>large</div>
+        <div class="cell size-cell col-sm-1-9   col-md-1-1   col-lg-1-1   col-xl-1-1 ">Small</div>
+        <div class="cell size-cell col-sm-10-10 col-md-2-10  col-lg-2-2   col-xl-2-2 ">Medium</div>
+        <div class="cell size-cell col-sm-11-11 col-md-11-11 col-lg-3-11  col-xl-3-3 ">Large</div>
+        <div class="cell size-cell col-sm-12-12 col-md-12-12 col-lg-12-12 col-xl-4-12">Extra large</div>
       </div>
       <div class="row">
         <div class="cell col-lg-9-12 col-sm-2-3"><img src="img/1f607.png" alt=""></div>
