Added comments and enhanced some debug helpers

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       align-items: center;
       justify-content: center;
       text-align: center;
+      border: thin solid rgba(128, 128, 128, 0.2);
+      padding: 10px;
     }
     .size-cell {
       font-size: 20px;
