added grid features

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         <div class="cell col-md-11-11">11</div>
         <div class="cell col-md-12-12">12</div>
       </div>
+      <div class="grid-mode">
+        
+        <div class="cell range-lg-a1-b2 range-md-a5-a6">i am the first range!!</div>
+        <div class="cell range-lg-b5-c6 range-md-b3-b3">I am the second range!!</div>
+      </div>
     </div>
   </main>
 </body>
