Created a demo for the framework

--- a/index.html
+++ b/index.html
@@ -5,41 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Yet another grid framework demo</title>
   <link rel="stylesheet" href="css/yagf.css">
-  <style>
-    .cell {
-      font: bold 24px monospace;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      border: thin solid rgba(128, 128, 128, 0.2);
-      padding: 10px;
-    }
-    .size-cell {
-      font-size: 20px;
-      font-weight: bold;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <main>
+    <h1>YAGF (Yet Another Grid Framework) demo</h1>
+    <h2>by Nico &amp; Oscar, the "Dream Team" :-)</h2>
+    <p>
+      This framework has two different modes:
+    </p>
+    <p>
+      <strong>Bootstrap mode:</strong>
+      In this mode, the layout will mimic the behaviour of Bootstrap, using selectors
+      similar to that framework, but with the variant that you select the starting
+      column and the ending column for the cell.
+    </p>
+
     <div class="yagf">
       <div class="row">
-        <div class="cell size-cell col-sm-1-9   col-md-1-1   col-lg-1-1   col-xl-1-1 ">Small</div>
-        <div class="cell size-cell col-sm-10-10 col-md-2-10  col-lg-2-2   col-xl-2-2 ">Medium</div>
-        <div class="cell size-cell col-sm-11-11 col-md-11-11 col-lg-3-11  col-xl-3-3 ">Large</div>
-        <div class="cell size-cell col-sm-12-12 col-md-12-12 col-lg-12-12 col-xl-4-12">Extra large</div>
+        <div class="cell size-cell col-md-1-10  col-lg-1-2 ">Medium</div>
+        <div class="cell size-cell col-md-11-12 col-lg-3-12">Large</div>
       </div>
       <div class="row">
-        <div class="cell col-lg-9-12 col-sm-2-3"><img src="img/1f607.png" alt=""></div>
-        <div class="cell col-lg-1-4  col-sm-6-7"><img src="img/1f92a.png" alt=""></div>
-        <div class="cell col-lg-5-8  col-sm-10-11"><img src="img/1f976.png" alt=""></div>
+        <div class="cell col-lg-9-12 col-md-2-3"><img src="img/1f607.png" alt=""></div>
+        <div class="cell col-lg-1-4  col-md-6-7"><img src="img/1f92a.png" alt=""></div>
+        <div class="cell col-lg-5-8  col-md-10-11"><img src="img/1f976.png" alt=""></div>
       </div>
       <div class="row">
-        <div class="cell col-md-1-1 col-lg-4-4">1</div>
-        <div class="cell col-md-2-2 col-lg-3-3">2</div>
-        <div class="cell col-md-3-3 col-lg-2-2">3</div>
-        <div class="cell col-md-4-4 col-lg-1-1">4</div>
+        <div class="cell cell1 col-md-1-1 col-lg-4-4">1</div>
+        <div class="cell cell2 col-md-2-2 col-lg-3-3">2</div>
+        <div class="cell cell3 col-md-3-3 col-lg-2-2">3</div>
+        <div class="cell cell4 col-md-4-4 col-lg-1-1">4</div>
         <div class="cell col-md-5-5">5</div>
         <div class="cell col-md-6-6">6</div>
         <div class="cell col-md-7-7">7</div>
@@ -49,12 +45,30 @@
         <div class="cell col-md-11-11">11</div>
         <div class="cell col-md-12-12">12</div>
       </div>
+    </div>
+
+    <p>
+      <strong>Grid mode:</strong>
+      In this mode, the user can select the cells using an Excel-like notation. The
+      default grid size is 12 columns by 3 rows, but that can be changed by modifying
+      the respective values from the defs.scss fragment and recompiling the framework.
+    </p>
+
+    <div class="yagf">
       <div class="grid-mode">
-        
-        <div class="cell range-lg-a1-b2 range-md-a5-a6">i am the first range!!</div>
-        <div class="cell range-lg-b5-c6 range-md-b3-b3">I am the second range!!</div>
+        <div class="cell range-lg-a1-a1 range-md-c6-c6"><img class="logo" src="img/logo.jpg" alt=""></div>
+        <nav class="demo-head cell range-lg-a2-a6">I am the header</nav>
+        <div class="demo-body grid-mode range-lg-b1-b6">
+          <aside  class="cell range-lg-a1-b1 range-md-a6-a6">I am an aside</aside>
+          <div    class="cell range-lg-c1-c1 range-md-a1-a1"><img src="img/1f607.png" alt=""></div>
+          <div    class="cell range-lg-a2-c5 range-md-a2-c5">I am the body </div>
+          <div    class="cell range-lg-a6-a6 range-md-c1-c1"><img src="img/1f92a.png" alt=""></div>
+          <aside  class="cell range-lg-b6-c6 range-md-c6-c6">I am another aside</aside>
+        </div>
+        <footer class="demo-foot cell range-lg-c1-c6 range-md-c1-c5">I am the footer</footer>
       </div>
     </div>
+
   </main>
 </body>
 </html>
