--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <div class="cell display-md-none size-cell col-lg-1-12">Large</div>
       </div>
       <div class="row">
-        <div class="cell col-lg-9-12 col-md-2-3"><img src="img/1f607.png" alt=""></div>
-        <div class="cell col-lg-1-4  col-md-6-7"><img src="img/1f92a.png" alt=""></div>
-        <div class="cell col-lg-5-8  col-md-10-11"><img src="img/1f976.png" alt=""></div>
-      </div>
+        <div class="cell col-lg-9-12 col-md-2-3"><img src="img/1f607.png"   class="border-lg-1rem border-color-lg-olive" alt=""></div>
+        <div class="cell col-lg-1-4  col-md-6-7"><img src="img/1f92a.png"   class="border-md-1rem border-color-md-blue" alt=""></div>
+        <div class="cell col-lg-5-8  col-md-10-11"><img src="img/1f976.png" class="border-lg-1rem border-color-lg-red" alt=""></div>
+      </div> 
       <div class="row">
         <div class="cell cell1 col-md-1-1 col-lg-4-4">1</div>
         <div class="cell cell2 col-md-2-2 col-lg-3-3">2</div>
@@ -42,9 +42,9 @@
         <div class="cell col-md-7-7 bgcolor-md-maroon txtcolor-md-yellow bgcolor-lg-blue txtcolor-lg-white">7</div>
         <div class="cell col-md-8-8 bgcolor-md-maroon txtcolor-md-yellow bgcolor-lg-blue txtcolor-lg-white">8</div>
         <div class="cell col-md-9-9 bgcolor-md-maroon txtcolor-md-yellow bgcolor-lg-blue txtcolor-lg-white">9</div>
-        <div class="cell col-md-10-10">10</div>
-        <div class="cell col-md-11-11">11</div>
-        <div class="cell col-md-12-12">12</div>
+        <div class="cell col-md-10-10 round-box-md-10px" >10</div>
+        <div class="cell col-md-11-11 circle-lg" >11</div>
+        <div class="cell col-md-12-12 round-box-md-10px" >12</div>
       </div>
     </div>
 
